chore: fix path for default language and avoid overlap of contextual link
Refs: sitrep

--- a/html/themes/custom/common_design_subtheme/components/sitrep/sitrep.css
+++ b/html/themes/custom/common_design_subtheme/components/sitrep/sitrep.css
@@ -7,10 +7,17 @@ article.node--type-page:has(.snap) {
   position: relative;
 
   .cd-page-title {
-    padding-inline-end: 2rem;
-  }
-  div.snap + h1 + div.contextual {
     padding-inline-end: 1.5rem;
+  }
+  div.snap + h1 + div.contextual  {
+    [dir=ltr] & {
+      left: unset;
+      right: 1.5rem;
+    }
+    [dir=rtl] & {
+      left: 1.5rem;
+      right: unset;
+    }
   }
 }
 
